# send-bills

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
data/: example.csv
docs/: improvement-plan.md
secrets/: README.md
src/send_bills/: main.py  manage.py
src/send_bills/api/: apps.py  urls.py  views.py
src/send_bills/api/tests/: test_generate_recurring_bills_api_view.py  test_overdue.py  test_send_pending_bills_api_view.py
src/send_bills/bills/: admin.py  apps.py  forms.py  models.py  references.py  services.py  tests.py  urls.py  utils.py  views.py
src/send_bills/bills/management/commands/: dev_seed.py  process_bills.py
src/send_bills/bills/migrations/: 0001_initial.py  0002_alter_recurringbill_frequency.py  0003_recurringbill_frequency_kwargs.py  0004_remove_recurringbill_additional_information_and_more.py  0005_bill_currency_bill_language_bill_sent_at_and_more.py  0006_alter_bill_currency_alter_bill_language_and_more.py  0007_alter_bill_recurring_bill_and_more.py  0008_bill_overdue_notification_tracking.py  0009_alter_bill_reference_number.py  0010_creditor_house_num_creditor_street.py
src/send_bills/bills/templatetags/: version.py
src/send_bills/bills/tests/: test_generate_recurring_bills_api_view.py  test_models.py  test_payments.py  test_send_pending_bills_api_view.py  test_utils.py
src/send_bills/project/: asgi.py  backends.py  dev_authelia_middleware.py  email.py  middleware.py  urls.py  wsgi.py
src/send_bills/project/settings/: base.py  development.py  production.py  utils.py
src/send_bills/templates/admin/: base_site.html
src/send_bills/templates/admin/bills/creditor/: change_list.html  upload_csv.html
src/send_bills/templates/emails/: bill_body.txt  overdue_body.txt  overdue_subject.txt
src/send_bills/tests/: conftest.py  test_settings.py
src/send_bills/tests/api/: test_generate_recurring_bills_api_view.py  test_overdue.py  test_send_pending_bills_api_view.py
src/send_bills/tests/bills/: test_dev_seed_command.py  test_models.py  test_payments.py  test_process_bills_command.py  test_services.py  test_utils.py  test_version.py  transactions.csv
src/templates/emails/: bill_subject.txt
