[project]
name = "send_bills"
authors = [
{ name = "Enucatl", email = "1423701+Enucatl@users.noreply.github.com" },
]
license-files = [
  "LICENSE",
]
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
  "cairosvg",
  "click",
  "dj-database-url",
  "django >= 5.2",
  "gunicorn",
  "Jinja2",
  "mixer",
  "pandas",
  "psycopg2-binary",
  "pyarrow",
  "python-stdnum",
  "qrbill",
]
dynamic = ["version"]

[build-system]
requires = [
    "setuptools >= 77",
    "wheel",
    "setuptools-git-versioning",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "setuptools-git-versioning",
]

[tool.setuptools-git-versioning]
enabled = true

[tool.ruff]
select = ["ALL"]
